add `[skip ci]` in git commit message, when Push new runs

--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -150,5 +150,5 @@ jobs:
           git config --local user.email "${{ env.GITHUB_EMAIL }}"
           git config --local user.name "${{ env.GITHUB_NAME }}"
           git add .
-          git commit -m 'Add new workouts' || echo "nothing to commit"
+          git commit -m '[skip ci] Add new workouts' || echo "nothing to commit"
           git push || echo "nothing to push"
