fix: sync local file

--- a/.github/workflows/run_fit_sync_when_push_data.yml
+++ b/.github/workflows/run_fit_sync_when_push_data.yml
@@ -10,7 +10,6 @@ on:
 
 env:
   # please change to your own config.
-  ENABLE: True
   ATHLETE: yihong0618
   TITLE: Yihong0618 Running
   MIN_GRID_DISTANCE: 10 # change min distance here
@@ -26,7 +25,7 @@ env:
 
 jobs:
   sync:
-    if: env.ENABLE == True
+    if: true
     name: Sync
     runs-on: ubuntu-latest
     steps:
