--- a/.github/workflows/run_tcx_sync_when_push_data.yml
+++ b/.github/workflows/run_tcx_sync_when_push_data.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   sync_fit_file:
-    if: false
+    if: true
     uses: .github/workflows/run_data_sync.yml
     with:
       run_type: only_tcx
