--- a/.github/workflows/run_fit_sync_when_push_data.yml
+++ b/.github/workflows/run_fit_sync_when_push_data.yml
@@ -12,6 +12,6 @@ on:
 jobs:
   sync_fit_file:
     if: true
-    uses: .github/workflows/run_data_sync.yml
+    uses: ./.github/workflows/run_data_sync.yml
     with:
       run_type: only_fit
