--- a/.github/workflows/run_data_sync_when_push.yml
+++ b/.github/workflows/run_data_sync_when_push.yml
@@ -22,6 +22,6 @@ env:
 jobs:
   sync_fit_file:
     if: false
-    uses: .github/workflows/run_data_sync.yml
+    uses: ./.github/workflows/run_data_sync.yml
     with:
       run_type: env.RUN_TYPE
