fix:  workflow_dispatch import run_type

--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -8,7 +8,7 @@ on:
         type: string
   workflow_dispatch:
     inputs:
-      logLevel:
+      run_type:
         description: 'run type'
         required: true
         default: 'pass'
