--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -70,15 +70,10 @@ jobs:
           key: Ubuntu-pip-${{ steps.set_variables.outputs.PY }}
 
       - name: Cache Data Files
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
-            FIT_OUT
-            GPX_OUT
-            TCX_OUT
-            activities
-            assets
-            scripts/data.db
+            ~/running_page_data
           key: data-files
 
       - name: Install dependencies
@@ -175,3 +170,8 @@ jobs:
           python scripts/gen_svg.py --from-db --title "${{ env.TITLE_GRID }}" --type grid --athlete "${{ env.ATHLETE }}" --output assets/grid.svg --special-color yellow --special-color2 red --special-distance 20 --special-distance2 40 --use-localtime --min-distance "${{ env.MIN_GRID_DISTANCE }}"
           python scripts/gen_svg.py --from-db --type circular --use-localtime
           python scripts/gen_svg.py --from-db --year $(date +"%Y")  --language zh_CN --title "$(date +"%Y") Workouts" --type github --athlete "${{ env.ATHLETE }}" --special-distance 10 --special-distance2 20 --special-color yellow --special-color2 red --output assets/github_$(date +"%Y").svg --use-localtime --min-distance 0.5
+
+      - name: Save assets to cache dir
+        if: inputs.run_type != 'pass'
+        run: |
+          cp -r assets ~/running_page_data
