change cache key

--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -78,7 +78,7 @@ jobs:
         with:
           path: |
             ~/running_page_data
-          key: data-files
+          key: workouts_data_files
 
       - name: Install dependencies
         run: |
