--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           path: |
             ~/running_page_data
-          key: data-files
+          key: workouts_data_files
           lookup-only: true
 
       - name: Setup Node.js environment
