--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           path: |
             ~/running_page_data
-          key: workouts_data_files
+          key: workouts_data
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.4
