--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -79,7 +79,9 @@ jobs:
         with:
           path: |
             ${{ env.DATA_ROOT }}
-          key: workouts_data
+          key: workouts_data-${{ env.GITHUB_SHA }}
+          restore-keys: |
+            workouts_data-
 
       - name: Install dependencies
         run: |
