--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -155,6 +155,7 @@ jobs:
         if: inputs.run_type == 'strava_to_garmin_cn'
         run: |
           get_all_arg=""
+          echo ${{ github.event.head_commit.message }}
           if [ ${{ startsWith(github.event.head_commit.message, '[garmin_get_all]') }} ]:
           then
             get_all_arg="--get-all"
