[garmin_get_all] test for garmin get all track files

--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -126,7 +126,13 @@ jobs:
       - name: Run sync Garmin CN script
         if: inputs.run_type == 'garmin_cn'
         run: |
-          python scripts/garmin_sync.py ${{ secrets.GARMIN_CN_EMAIL }} ${{ secrets.GARMIN_CN_PASSWORD }} --is-cn --fit
+          get_all_arg=""
+          if [ ${{ startsWith(github.event.head_commit.message, '[garmin_get_all]') }} ]:
+          then
+            get_all_arg="--get-all"
+            echo "garmin get all track files"
+          fi
+          python scripts/garmin_sync.py ${{ secrets.GARMIN_CN_EMAIL }} ${{ secrets.GARMIN_CN_PASSWORD }} --is-cn --fit $get_all_arg
         # If you only want to sync `type running` add args --only-run, default script is to sync all data (rides and runs).
         # python scripts/garmin_sync.py ${{ secrets.GARMIN_EMAIL }} ${{ secrets.GARMIN_PASSWORD }} --only-run --is-cn
 
@@ -154,13 +160,7 @@ jobs:
       - name: Run sync Strava to Garmin-cn(Run with strava(or others upload to strava) data backup in Garmin-cn)
         if: inputs.run_type == 'strava_to_garmin_cn'
         run: |
-          get_all_arg=""
-          if [ ${{ startsWith(github.event.head_commit.message, '[garmin_get_all]') }} ]:
-          then
-            get_all_arg="--get-all"
-            echo "garmin get all track files"
-          fi
-          python scripts/strava_to_garmin_sync.py ${{ secrets.STRAVA_CLIENT_ID }} ${{ secrets.STRAVA_CLIENT_SECRET }} ${{ secrets.STRAVA_CLIENT_REFRESH_TOKEN }}  ${{ secrets.GARMIN_CN_EMAIL }} ${{ secrets.GARMIN_CN_PASSWORD }} ${{ secrets.STRAVA_EMAIL }} ${{ secrets.STRAVA_PASSWORD }} --is-cn  $get_all_arg
+          python scripts/strava_to_garmin_sync.py ${{ secrets.STRAVA_CLIENT_ID }} ${{ secrets.STRAVA_CLIENT_SECRET }} ${{ secrets.STRAVA_CLIENT_REFRESH_TOKEN }}  ${{ secrets.GARMIN_CN_EMAIL }} ${{ secrets.GARMIN_CN_PASSWORD }} ${{ secrets.STRAVA_EMAIL }} ${{ secrets.STRAVA_PASSWORD }} --is-cn
 
       - name: Run sync Garmin-cn to Strava(Run with Garmin data backup in Strava)
         if: inputs.run_type == 'garmin_to_strava_cn'
