--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -132,7 +132,8 @@ jobs:
         if: inputs.run_type == 'garmin_cn'
         run: |
           get_all_arg=""
-          if [ ${{ startsWith(github.event.head_commit.message, '[garmin_get_all]') || inputs.get_all_garmin_data == 'true' }} ]; then
+          echo ${{github.event.push.head_commit.message}}
+          if [ ${{ startsWith(github.event.push.head_commit.message, '[garmin_get_all]') || inputs.get_all_garmin_data == true }} ]; then
             get_all_arg="--get-all"
             echo "garmin get all track files"
           fi
