--- a/.github/workflows/run_fit_sync_when_push_data.yml
+++ b/.github/workflows/run_fit_sync_when_push_data.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   sync_fit_file:
     if: true
+    secrets: inherit
     uses: ./.github/workflows/run_data_sync.yml
     with:
       run_type: only_fit
