--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -54,7 +54,7 @@ env:
   # Dont making this huge, just picking points you needing. https://developers.google.com/maps/documentation/utilities/polylineutility using this tool to making your polyline
   IGNORE_RANGE: 10 # Unit meter
   SAVE_DATA_IN_GITHUB_CACHE: true # if you deploy in the vercal, check the README
-  DATA_CACHE_PREFIX: "track_data"
+  DATA_CACHE_PREFIX: "track_data_2.0"
   BUILD_GH_PAGES: true
 
 jobs:
@@ -146,8 +146,7 @@ jobs:
           fi
           # python run_page/get_garmin_secret.py ${secrets.GARMIN_CN_EMAIL} ${secrets.GARMIN_CN_PASSWORD} --is-cn
           python run_page/garmin_sync.py ${{ secrets.GARMIN_SECRET_STRING_CN }} --is-cn --fit $get_all_arg
-        # If you only want to sync `type running` add args --only-run, default script is to sync all data (rides and runs).
-        # python run_page/garmin_sync.py ${{ secrets.GARMIN_SECRET_STRING_CN }}  --only-run --is-cn
+
 
       - name: Run sync Only GPX script
         if: inputs.run_type == 'only_gpx'
