--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -1,23 +1,43 @@
 name: Run Data Sync
 
 on:
+  workflow_call:
+    inputs:
+      run_type:
+        required: true
+        type: string
+      get_all_garmin_data:
+        description: 'if get all garmin data'
+        required: false
+        default: false
+        type: boolean
   workflow_dispatch:
-  schedule:
-    - cron: '0 0 * * *'
-  push:
-    branches:
-      - master
-    paths:
-      - run_page/nike_sync.py
-      - run_page/nike_to_strava_sync.py
-      - run_page/strava_sync.py
-      - run_page/gen_svg.py
-      - run_page/garmin_sync.py
-      - run_page/keep_sync.py
-      - run_page/gpx_sync.py
-      - run_page/tcx_sync.py
-      - run_page/garmin_to_strava_sync.py
-      - requirements.txt
+    inputs:
+      get_all_garmin_data:
+        description: 'if get all garmin data'
+        required: false
+        default: false
+        type: boolean
+      run_type:
+        description: 'run type'
+        required: true
+        default: 'pass'
+        type: choice
+        options:
+          - strava
+          - nike
+          - garmin
+          - garmin_cn
+          - keep
+          - only_gpx
+          - only_tcx
+          - only_fit
+          - nike_to_strava
+          - strava_to_garmin
+          - strava_to_garmin_cn
+          - garmin_to_strava
+          - garmin_to_strava_cn
+          - codoon
 
 env:
   # please change to your own config.
